# webro

./: .gitignore  CMakeLists.txt  README.md  conventions.md
.githooks/: prepare-commit-msg
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
artifacts/VST3/webro.vst3/Contents/_CodeSignature/: CodeResources
cmake/shims/Foundation/: NSGarbageCollector.h
releases/V01.00/: readme.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/apple-sdk-shims/Foundation/: NSGarbageCollector.h
